<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:padding="16dp">

    <TextView
            android:text="@string/export_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/start_period"
            android:textColorHint="@color/dark_blue"
            app:boxStrokeColor="@color/dark_blue"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/dark_blue"
            app:placeholderTextColor="@color/dark_blue"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/startText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:editable="false"
                android:focusable="false"
                android:fontFamily="sans-serif"
                android:textColor="@color/dark_blue"
                android:textColorHint="@color/dark_blue" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/end_period"
            android:textColorHint="@color/dark_blue"
            app:boxStrokeColor="@color/dark_blue"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/dark_blue"
            app:placeholderTextColor="@color/dark_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintVertical_bias="0.0"
            android:id="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/endText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:editable="false"
                android:focusable="false"
                android:fontFamily="sans-serif"
                android:textColor="@color/dark_blue"
                android:textColorHint="@color/dark_blue"
                android:layout_weight="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:text="@string/format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView14"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="16sp" />

    <RadioButton
            android:id="@+id/systemTheme2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/csv"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            android:theme="@style/CheckBox.Theme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            android:checked="true"
            app:layout_constraintEnd_toEndOf="parent" />

    <Button
            android:id="@+id/exportNotesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/green"
            android:text="@string/export_button"
            android:textColor="@color/dark_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintTop_toBottomOf="@+id/systemTheme2" />

</androidx.constraintlayout.widget.ConstraintLayout>